# NauEditorPublic

./: .enginehash  .gitignore  CMakeLists.txt  CMakePresets.json
editor/source/editor/: CMakeLists.txt
editor/source/editor-core/: CMakeLists.txt  nau_dock_manager.cpp  nau_entity_creation_panel.cpp  nau_entity_creation_panel.hpp  nau_main_menu.cpp  nau_title_bar.cpp
editor/source/editor-core/baseWidgets/: nau_header_view.cpp  nau_menu.cpp  nau_menu.hpp  nau_widget.cpp
editor/source/editor-core/browser/: nau_file_operations.cpp  nau_project_browser_file_operations_menu.cpp  nau_project_browser_file_system_model.cpp  nau_project_browser_list_view.cpp  nau_project_browser_table_view.cpp  nau_project_browser_tree_view.cpp
editor/source/editor-core/filter/: nau_filter_widget.cpp
editor/source/editor-core/include/nau/outliner/: nau_outliner_client_interface.hpp
editor/source/editor-core/inspector/: nau_object_inspector.cpp
editor/source/editor-core/log/: nau_log_model.cpp  nau_log_toolbar.cpp  nau_logger_details_panel.cpp
editor/source/editor-core/src/app/: nau_editor.cpp
editor/source/editor-core/src/assets/: nau_asset_manager_impl.cpp  nau_asset_manager_impl.hpp
editor/source/editor-core/src/inspector/: nau_inspector.cpp
editor/source/editor-core/src/outliner/: nau_world_outline_panel.cpp
editor/source/editor-core/src/playmode/: nau_play_commands.cpp
editor/source/editor-engine/: CMakeLists.txt
editor/source/editor-engine/include/nau/gizmo/: nau_camera_gizmo.hpp  nau_gizmo.hpp
editor/source/editor-engine/include/nau/viewport/: nau_viewport_utils.hpp
editor/source/editor-engine/src/gizmo/: nau_camera_gizmo.cpp  nau_gizmo.cpp
editor/source/editor-engine/src/viewport/: nau_viewport_utils.cpp
editor/source/modules/nau-animation-clip-editor/src/widgets/: nau_timeline_content_view.cpp  nau_timeline_track_list.cpp
editor/source/modules/nau-gui-editor/src/: nau_gui_editor.cpp
editor/source/modules/nau-gui-editor/src/outlainer/: nau_gui_outliner_client.cpp  nau_gui_outliner_client.hpp
editor/source/modules/nau-input-editor/src/components/pages/: nau_input_editor_page.cpp
editor/source/modules/nau-scene-editor/src/: nau_usd_scene_editor_impl.cpp  nau_usd_scene_editor_impl.hpp
editor/source/modules/nau-scene-editor/src/viewport/: nau_scene_camera_controller.cpp  nau_scene_camera_controller.hpp  nau_transform_tools.cpp
editor/source/modules/nau-scene-editor/src/widgets/: nau_scene_camera_settings.cpp
editor/source/modules/usd-asset-editor-common/include/nau/inspector/: nau_usd_inspector_client.hpp
editor/source/modules/usd-asset-editor-common/include/nau/outliner/: nau_usd_outliner_client.hpp
editor/source/modules/usd-asset-editor-common/src/inspector/: nau_physics_inspector_widgets.cpp  nau_usd_inspector_client.cpp
editor/source/modules/usd-asset-editor-common/src/outliner/: nau_usd_outliner_client.cpp
installer/: CMakeLists.txt  installer.py
installer/win64/: build.py
